# openddil-stack

./: .cursorrules  .gitignore  AGENTS.md  README.md  docker-compose.yml  llms.txt
.github/workflows/: docker-build-asset-registry.yml  notify-bundle-rebuild.yml  schema-checks.yml
asset-registry-service/: Dockerfile  README.md  pyproject.toml
asset-registry-service/src/asset_registry_service/: __init__.py  config.py  db.py  edge_assignment.py  main.py  registry_app.py
asset-registry-service/src/tests/: conftest.py  test_upsert_priority.py
electric/: electrify.sql
helm/openddil-node/templates/: configmap.yaml  deployment.yaml
schema/: schema.hcl
schema/migrations/: 20260514040446_phase4a_pipeline_tables.sql  20260514110726_phase4a_cm_manual_discrepancies.sql  20260514150847_phase4c5_edge_buffer_status.sql  20260514183155_phase4d_origin_node_provenance.sql  20260518113046_phase6b_regional_rollup_tables.sql  20260520010000_phase7_asset_capability_state.sql  20260529010000_phase5_operational_state_columns.sql  20260604202813_phase8_asset_registry.sql  20260613000000_phase9_asset_element_telemetry.sql  20260613000000_phase9_mrad_element_telemetry.sql  20260630000000_inventory_per_asset_per_layer.sql  atlas.sum
tests/: test_migrations.py
