[project]
name = "openddil-asset-registry-service"
version = "0.1.0"
description = "Single-writer for the canonical asset->edge->region registry (ADR-0028)"
requires-python = ">=3.11"

dependencies = [
    "faust-streaming>=0.10.0",
    "aiokafka<0.12.0",
    "asyncpg>=0.28.0",
    "pyyaml>=6.0",
    "protobuf>=4.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
asset-registry-service = "asset_registry_service.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["asset_registry_service*"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
asyncio_mode = "auto"
